# Prueba_fisico

./: README.md
lidar2_ws/src/sllidar_ros2/launch/: sllidar_a2m12_launch.py
mpu_ws/src/imu_publisher/: package.xml  setup.py
mpu_ws/src/imu_publisher/imu_publisher/: IMU.py  cpr.py  motor.py  odom.py  pid.py
mpu_ws/src/imu_publisher/launch/: sensor.launch.py
navegation_ws/src/robot_cartographer/: CMakeLists.txt  package.xml
navegation_ws/src/robot_cartographer/config/: turtlebot3_lds_2d.lua  turtlebot3_lds_3d.lua
navegation_ws/src/robot_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
navegation_ws/src/robot_cartographer/rviz/: tb3_cartographer.rviz
navegation_ws/src/robot_description/: CMakeLists.txt  package.xml
navegation_ws/src/robot_description/config/: nav2_params.yaml  slam_toolbox.yaml
navegation_ws/src/robot_description/launch/: gazebo.launch.py  pc2_to_scan.launch.py
navegation_ws/src/robot_description/robot_description/: robot_height_scan.py
navegation_ws/src/robot_description/rviz/: min.rviz  urdf.rviz
navegation_ws/src/robot_description/urdf/: JPAC2.xacro  JPAC2_REPUESTO.xacro
navegation_ws/src/robot_description/world/: creado.sdf  custom.sdf
navegation_ws/src/robot_navigation2/: CMakeLists.txt  package.xml
navegation_ws/src/robot_navigation2/launch/: navigation.launch.py  navigation2.launch.py
navegation_ws/src/robot_navigation2/map/: BIONDA.pgm  BIONDA.yaml  jpac2_p1.pgm  jpac2_p1.yaml  map_cuarto1.pgm  map_cuarto1.yaml
navegation_ws/src/robot_navigation2/param/humble/: agro.yaml  agro2.yaml  conf_jpac2.yaml  navigate_w_replanning_and_recovery.xml
rosbot_ws/src/robot_description/: CMakeLists.txt
rosbot_ws/src/robot_description/config/: ekf.yaml
rosbot_ws/src/robot_description/launch/: display.launch  display.launch.py  gazebo.launch.py
rosbot_ws/src/robot_description/meshes/: left_wheel.STL  right_wheel.STL
rosbot_ws/src/robot_description/urdf/: proto_L.urdf  rosbot.urdf
rosbot_ws/src/robot_description/world/: custom.sdf
