<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_navigation2</name>
  <version>2.3.3</version>
  <description>
    JPAC2   navigation2
  </description>
  
  <maintainer email="lipaleyla9@gmail.com">Leyla</maintainer>
  
  <license>Apache 2.0</license>
  

  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  
</package>